hphp/hack/test/typecheck/nameof/parsing/nameof_array_get.php.exp
File "nameof_array_get.php", line 5, characters 12-18:
`nameof` can only be used with a class (Parsing[1002])
