hphp/hack/test/typecheck/nameof/parsing/nameof_array_get.php
<?hh

class C {
  public static function f(vec<int> $foo): void {
    nameof $foo[3];
  }
}
